index navigation bar
1 navigation bar

--- a/home.html
+++ b/home.html
@@ -179,13 +179,17 @@
     <br><br><br><br><br><br><br><br><br>
 
 
+<div class="box">
+    <ul class="mincontaomers"><a href=""><i class="fas fa-globe-asia" style="color: #ffffff;"></i></a> Explore everywhere</ul>
+    <ul class="mincontaomers"><a href=""><i class="fas fa-hotel" style="color: #ffffff;"></i></a> Hotels</ul>
+    <ul class="mincontaomers"><a href=""><i class="fas fa-car-side" style="color: #ffffff;"></i></a> Car rental</ul>
+</div>
 
-
-        <div class="minibox">
+        <!-- <div class="minibox">
             <ul class="mincontaomers"><a href=""><i class="fas fa-globe-asia" style="color: #ffffff;"></i></a> Explore everywhere</ul>
             <ul class="mincontaomers"><a href=""><i class="fas fa-hotel" style="color: #ffffff;"></i></a> Hotels</ul>
             <ul class="mincontaomers"><a href=""><i class="fas fa-car-side" style="color: #ffffff;"></i></a> Car rental</ul>
-        </div>
+        </div> -->
 
     
 
