--- a/home.html
+++ b/home.html
@@ -67,9 +67,7 @@
 
 
 
-    <div class="custom-box">
-        <!-- <p>Book Cheap Flights from Over 500 Airlines!</p> -->
-    </div>
+    <div class="custom-box"></div>
     <section>
         <div id="booking" class="section">
             <div class="section-center">
