--- a/index.html
+++ b/index.html
@@ -78,6 +78,109 @@
       </nav>
 
 
+
+    <div class="custom-box"></div>
+    <div>
+        <div id="booking" class="section">
+            <div class="section-center">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="booking-cta">
+                                <h1>Book your flight today</h1>
+                            </div>
+                        </div>
+                        <div class="col-md-7 offset-md-1">
+                            <div class="booking-form">
+                                <form action="process_booking.php" method="post">
+                                    <div class="form-group">
+                                        <div class="form-checkbox">
+                                            <label for="one-way">
+                                                <input type="radio" id="one-way" name="flight-type" value="One way">
+                                                <span></span>One way
+                                            </label>
+                                            <label for="multi-city">
+                                                <input type="radio" id="multi-city" name="flight-type" value="Multi-City">
+                                                <span></span>Multi-City
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label class="form-label">Flying from</label>
+                                                <input class="form-control" type="text" name="from" placeholder="City or airport">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label class="form-label">Flying to</label>
+                                                <input class="form-control" type="text" name="to" placeholder="City or airport">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label class="form-label">Departing</label>
+                                                <input class="form-control" type="date" name="departing" required>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label class="form-label">Returning</label>
+                                                <input class="form-control" type="date" name="returning" required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                <label class="form-label">Adults (18+)</label>
+                                                <select class="form-control" name="adults">
+                                                    <option>1</option>
+                                                    <option>2</option>
+                                                    <option>3</option>
+                                                </select>
+                                                <span class="select-arrow"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                <label class="form-label">Children (0-17)</label>
+                                                <select class="form-control" name="children">
+                                                    <option>0</option>
+                                                    <option>1</option>
+                                                    <option>2</option>
+                                                </select>
+                                                <span class="select-arrow"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                <label class="form-label">Travel class</label>
+                                                <select class="form-control" name="travel-class">
+                                                    <option>Economy class</option>
+                                                    <option>Business class</option>
+                                                    <option>First class</option>
+                                                </select>
+                                                <span class="select-arrow"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-btn">
+                                        <button type="submit" class="btn btn-primary">Show flights</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
       
 
 
