--- a/index.html
+++ b/index.html
@@ -179,13 +179,27 @@
       </section>
       
 
-
-      <div class="box">
-        <ul class="mincontaomers"><a href=""><i class="fas fa-globe-asia" style="color: #ffffff;"></i></a> Explore everywhere</ul>
-        <ul class="mincontaomers"><a href=""><i class="fas fa-hotel" style="color: #ffffff;"></i></a> Hotels</ul>
-        <ul class="mincontaomers"><a href=""><i class="fas fa-car-side" style="color: #ffffff;"></i></a> Car rental</ul>
-      </div>
-
+<!-- mini box for car, hotel, explore -->
+      <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <div class="box">
+                    <ul class="mincontaomers"><a href=""><i class="fas fa-globe-asia" style="color: #ffffff;"></i></a> Explore everywhere</ul>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="box">
+                    <ul class="mincontaomers"><a href=""><i class="fas fa-hotel" style="color: #ffffff;"></i></a> Hotels</ul>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="box">
+                    <ul class="mincontaomers"><a href=""><i class="fas fa-car-side" style="color: #ffffff;"></i></a> Car rental</ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
