--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="row">
               <div class="col-md-4">
                   <div class="booking-cta">
-                      <h1>Book your flight today</h1>
+                      <h1>BOOK YOUR FLIGHT TODAY</h1>
                   </div>
               </div>
               <div class="col-md-8">
