--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
                                       <div class="row">
                                           <div class="col-md-6">
                                               <div class="form-group">
-                                                  <span class="form-label">Flying from</span>
+                                                  <span class="form-label">FLYING FROM</span>
                                                   <input class="form-control" type="text" name="from" placeholder="City or airport">
                                               </div>
                                           </div>
                                           <div class="col-md-6">
                                               <div class="form-group">
-                                                  <span class="form-label">Flying to</span>
+                                                  <span class="form-label">FLYING TO</span>
                                                   <input class="form-control" type="text" name="to" placeholder="City or airport">
                                               </div>
                                           </div>
@@ -120,13 +120,13 @@
                                       <div class="row">
                                           <div class="col-md-6">
                                               <div class="form-group">
-                                                  <span class="form-label">Departing</span>
+                                                  <span class="form-label">DEPARTING</span>
                                                   <input class="form-control" type="date" name="departing" required>
                                               </div>
                                           </div>
                                           <div class="col-md-6">
                                               <div class="form-group">
-                                                  <span class="form-label">Returning</span>
+                                                  <span class="form-label">RETURNING</span>
                                                   <input class="form-control" type="date" name="returning" required>
                                               </div>
                                           </div>
@@ -134,7 +134,7 @@
                                       <div class="row">
                                           <div class="col-md-4">
                                               <div class="form-group">
-                                                  <span class="form-label">Adults (18+)</span>
+                                                  <span class="form-label">ADULTS (18+)</span>
                                                   <select class="form-control" name="adults">
                                                       <option>1</option>
                                                       <option>2</option>
@@ -145,7 +145,7 @@
                                           </div>
                                           <div class="col-md-4">
                                               <div class="form-group">
-                                                  <span class="form-label">Children (0-17)</span>
+                                                  <span class="form-label">CHILDREN (0-17)</span>
                                                   <select class="form-control" name="children">
                                                       <option>0</option>
                                                       <option>1</option>
@@ -156,7 +156,7 @@
                                           </div>
                                           <div class="col-md-4">
                                               <div class="form-group">
-                                                  <span class="form-label">Travel class</span>
+                                                  <span class="form-label">TRAVEL CLASS</span>
                                                   <select class="form-control" name="travel-class">
                                                       <option>Economy class</option>
                                                       <option>Business class</option>
@@ -166,9 +166,9 @@
                                               </div>
                                           </div>
                                       </div>
-                                      <div class="form-btn">
-                                          <button type="submit" class="submit-btn">Show flights</button>
-                                      </div>
+                                      <div class="form-btn btn-primary">
+                                        <button type="submit" class="submit-btn btn-block border border-primary rounded">Show flights</button>
+                                    </div>                                                                      
                                   </form>
                               </div>
                           </div>
@@ -178,6 +178,7 @@
           </div>
       </section>
       
+      <br><br><br>
 
 <!-- mini box for car, hotel, explore -->
       <div class="container">
