--- a/index.html
+++ b/index.html
@@ -202,6 +202,142 @@
     </div>
     
 
+
+    <!-- image grid -->
+    <!-- grid_2 -->
+
+    <section class="grid-images">
+        <div class="container">
+            <h2 class="namechange text-center">Need help with your destination? Let us help you navigate the journey!</h2>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card bg-light border-primary">
+                        <div class="row no-gutters">
+                            <div class="col-md-8">
+                                <img src="img/amsterdam.png" alt="Amsterdam Image" class="card-img img-fluid">
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card-body">
+                                    <h2 class="card-title" style="color: #313541;">Amsterdam</h2>
+                                    <p class="card-text" style="color: #73767F;">ATH - AMS<br>Apr 5 - Apr 8</p>
+                                    <p class="card-text" style="color: #FF4600; font-weight: bold; font-size: 1.2em;">from $277.99*</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Επανάληψη για τις υπόλοιπες κάρτες -->
+                <!-- Επανάληψη για τις υπόλοιπες κάρτες -->
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card horizontal">
+                        <div class="image-container">
+                            <img src="img/abudhabi.png" alt="Abu Dhabi Image">
+                        </div>
+                        <div class="text-container" style="text-align: left;">
+                            <h2 style="color: #313541;">Abu Dhabi</h2>
+                            <p style="color: #73767F;">ATH - AUH<br>Apr 22 - Apr 30</p>
+                            <br>
+                            <p style="color: #FF4600; font-weight: bold; font-size: 1.2em;">from $1,030.99*</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Επανάληψη για τις υπόλοιπες κάρτες -->
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card horizontal">
+                        <div class="image-container">
+                            <img src="img/praga.png" alt="Praga Image">
+                        </div>
+                        <div class="text-container" style="text-align: left;">
+                            <h2 style="color: #313541;">Praga</h2>
+                            <p style="color: #73767F;">ATH - PRG<br>May 15 - May 19</p>
+                            <br>
+                            <p style="color: #FF4600; font-weight: bold; font-size: 1.2em;">from $189.99*</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Επανάληψη για τις υπόλοιπες κάρτες -->
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card horizontal">
+                        <div class="image-container">
+                            <img src="img/bucharest.png" alt="Bucharest Image">
+                        </div>
+                        <div class="text-container" style="text-align: left;">
+                            <h2 style="color: #313541;">Bucharest</h2>
+                            <p style="color: #73767F;">ATH - OTP<br>Mar 16 - Mar 21</p>
+                            <br>
+                            <p style="color: #FF4600; font-weight: bold; font-size: 1.2em;">from $279.99*</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Επανάληψη για τις υπόλοιπες κάρτες -->
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card horizontal">
+                        <div class="image-container">
+                            <img src="img/paris.png" alt="Paris Image">
+                        </div>
+                        <div class="text-container" style="text-align: left;">
+                            <h2 style="color: #313541;">Paris</h2>
+                            <p style="color: #73767F;">ATH - PRG<br>Mar 2 - Mar 6</p>
+                            <br>
+                            <p style="color: #FF4600; font-weight: bold; font-size: 1.2em;">from $289.99*</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card horizontal">
+                        <div class="image-container">
+                            <img src="img/oslo.png" alt="Oslo Image">
+                        </div>
+                        <div class="text-container" style="text-align: left;">
+                            <h2 style="color: #313541;">Oslo</h2>
+                            <p style="color: #73767F;">ATH - OSL<br>Apr 15 - Apr 22</p>
+                            <br>
+                            <p style="color: #FF4600; font-weight: bold; font-size: 1.2em;">from $654.99*</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card horizontal">
+                        <div class="image-container">
+                            <img src="img/madrid.png" alt="Madrid Image">
+                        </div>
+                        <div class="text-container" style="text-align: left;">
+                            <h2 style="color: #313541;">Madrid</h2>
+                            <p style="color: #73767F;">ATH - MAD<br>Jun 3 - Jun 7</p>
+                            <br>
+                            <p style="color: #FF4600; font-weight: bold; font-size: 1.2em;">from $325.99*</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card horizontal">
+                        <div class="image-container">
+                            <img src="img/rome.png" alt="Rome Image">
+                        </div>
+                        <div class="text-container" style="text-align: left;">
+                            <h2 style="color: #313541;">Rome</h2>
+                            <p style="color: #73767F;">ATH - FCO<br>Jul 10 - Jul 15</p>
+                            <br>
+                            <p style="color: #FF4600; font-weight: bold; font-size: 1.2em;">from $129.99*</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card horizontal">
+                        <div class="image-container">
+                            <img src="img/stockholm.png" alt="Stockholm Image">
+                        </div>
+                        <div class="text-container" style="text-align: left;">
+                            <h2 style="color: #313541;">Stockholm</h2>
+                            <p style="color: #73767F;">ATH - ARN<br>Aug 5 - Aug 11</p>
+                            <br>
+                            <p style="color: #FF4600; font-weight: bold; font-size: 1.2em;">from $429.99*</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
