--- a/index.html
+++ b/index.html
@@ -205,23 +205,27 @@
 
     <!-- image grid -->
     <!-- grid_2 -->
-
+   
     <section class="grid-images">
         <div class="container">
-            <h2 class="namechange text-center">Need help with your destination? Let us help you navigate the journey!</h2>
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-                    <div class="card bg-light border-primary">
+                <h2 class="namechange">Need help with your destination? Let us help you navigate the journey!</h2>
+                <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
+                    <div class="card horizontal">
                         <div class="row no-gutters">
-                            <div class="col-md-8">
-                                <img src="img/amsterdam.png" alt="Amsterdam Image" class="card-img img-fluid">
-                            </div>
-                            <div class="col-md-4">
-                                <div class="card-body">
-                                    <h2 class="card-title" style="color: #313541;">Amsterdam</h2>
-                                    <p class="card-text" style="color: #73767F;">ATH - AMS<br>Apr 5 - Apr 8</p>
-                                    <p class="card-text" style="color: #FF4600; font-weight: bold; font-size: 1.2em;">from $277.99*</p>
+                            <div class="col-md-7">
+                                <div class="image-container">
+                                    <img src="img/amsterdam-1150319_1280 2.png" alt="Amsterdam Image" class="img-fluid" style="height: auto; width: 100%;">
                                 </div>
+                            </div>
+                            <div class="col-md-5">
+                                <div class="text-container" style="padding-left: 20px;">
+                                    <h3 style="color: #313541;">Amsterdam</h2>
+                                    <p style="color: #73767F;">ATH - AMS<br>Apr 5 - Apr 8</p>
+                                    <br>
+                                    <p class="price" style="color: #FF4600; font-weight: bold; font-size: 1.2em;">$277.99*</p>
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
