--- a/registerform.html
+++ b/registerform.html
@@ -13,18 +13,61 @@
     <style>
         .divider:after,
         .divider:before {
-        content: "";
-        flex: 1;
-        height: 1px;
-        background: #eee;
+            content: "";
+            flex: 1;
+            height: 1px;
+            background: #eee;
         }
         .h-custom {
-        height: calc(100% - 73px);
+            height: calc(100vh - 73px);
         }
-        @media (max-width: 450px) {
-        .h-custom {
-        height: 100%;
+        @media (max-width: 768px) {
+            .h-custom {
+                height: 100%;
+            }
         }
+
+        /* Animation for input fields */
+        input.form-control:focus {
+            animation: input-focus-animation 0.3s ease-out;
+        }
+
+        @keyframes input-focus-animation {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.05);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
+
+        /* Move label up when input focused */
+        .form-outline {
+            position: relative;
+            margin-bottom: 1rem;
+        }
+
+        .form-outline input.form-control:focus ~ label {
+            top: -1.5rem;
+            font-size: 0.9rem;
+        }
+
+        .form-outline input.form-control:focus ~ label,
+        .form-outline input.form-control:valid ~ label {
+            color: #007bff;
+        }
+
+        .form-outline label {
+            position: absolute;
+            top: 0.5rem;
+            left: 0;
+            transition: top 0.3s, font-size 0.3s, color 0.3s;
+            cursor: text;
+            font-size: 1rem;
+            color: #6c757d;
         }
     </style>
 </head>
@@ -33,7 +76,7 @@
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-5">
-                    <img src="img/illustrator_1.jpg" class="img-fluid" alt="Sample image">
+                    <img src="img/illustrator_2.jpg" class="img-fluid" alt="Sample image">
                 </div>
                 <div class="col-md-6 offset-md-1">
                     <form id="loginForm">
@@ -54,13 +97,35 @@
                         </div>
                         <!-- Email input -->
                         <div class="form-outline mb-4">
-                            <input type="email" id="email" class="form-control form-control-lg" placeholder="Enter a valid email address">
-                            <label class="form-label" for="email">Email address</label>
+                            <input type="email" id="email" class="form-control form-control-lg" placeholder="Email">
+                            <label for="email">Email Address</label>
+                        </div>
+                        <!-- Full Name input -->
+                        <div class="form-outline mb-4">
+                            <input type="text" id="fullName" class="form-control form-control-lg" placeholder="Full Name">
+                        </div>
+                        <!-- Phone input -->
+                        <div class="form-outline mb-4">
+                            <input type="tel" id="phone" class="form-control form-control-lg" placeholder="Phone">
                         </div>
                         <!-- Password input -->
-                        <div class="form-outline mb-3">
-                            <input type="password" id="password" class="form-control form-control-lg" placeholder="Enter password">
-                            <label class="form-label" for="password">Password</label>
+                        <div class="form-outline mb-4">
+                            <input type="password" id="password" class="form-control form-control-lg" placeholder="Password">
+                        </div>
+                        <!-- Confirm Password input -->
+                        <div class="form-outline mb-4">
+                            <input type="password" id="confirmPassword" class="form-control form-control-lg" placeholder="Confirm Password">
+                        </div>
+                        <!-- Select Role input -->
+                        <div class="form-outline mb-4">
+                            <select class="form-select form-select-lg" id="role">
+                                <option selected>Select Role</option>
+                                <option value="user">User</option>
+                                <option value="passenger">Passenger</option>
+                                <option value="staff">Staff</option>
+                                <option value="pilot">Pilot</option>
+                                <option value="purser">Purser</option>
+                            </select>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <!-- Checkbox -->
@@ -71,8 +136,8 @@
                             <a href="#!" class="text-body">Forgot password?</a>
                         </div>
                         <div class="text-center text-md-start mt-4 pt-2">
-                            <button type="button" id="loginBtn" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="registerform.html" class="link-danger">Register</a></p>
+                            <button type="button" id="loginBtn" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Sign Up</button>
+                            <p class="small fw-bold mt-2 pt-1 mb-0">Already have an account? <a href="loginform.html" class="link-danger">Login</a></p>
                         </div>
                     </form>
                 </div>
@@ -100,48 +165,20 @@
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
-        document.getElementById("loginBtn").addEventListener("click", function () {
-            // Λαμβάνουμε τα δεδομένα από τα πεδία εισόδου
-            var email = document.getElementById("email").value;
-            var password = document.getElementById("password").value;
-            var rememberMe = document.getElementById("rememberMe").checked;
-
-            // Εδώ μπορείτε να προσθέσετε κώδικα για επεξεργασία των δεδομένων,
-            // όπως έλεγχος εγκυρότητας email, ύπαρξης κωδικού, κ.λπ.
-
-            // Παράδειγμα: Ελέγχουμε αν έχουν συμπληρωθεί τα πεδία
-            if (email.trim() === "" || password.trim() === "") {
-                alert("Please fill in all fields.");
-                return;
-            }
-
-            // Προαιρετικά, μπορείτε να αποθηκεύσετε τα στοιχεία σύνδεσης
-            // σε έναν αποθηκευτικό μηχανισμό όπως το localStorage για να θυμάται
-            // ο χρήστης τα στοιχεία του σε μελλοντικές συνδέσεις.
-            if (rememberMe) {
-                localStorage.setItem("email", email);
-                localStorage.setItem("password", password);
-            } else {
-                // Αφαιρούμε τα στοιχεία σύνδεσης από το localStorage αν δεν είναι επιλεγμένο το "Remember me"
-                localStorage.removeItem("email");
-                localStorage.removeItem("password");
-            }
-
-            // Μπορείτε να ανακατευθύνετε το χρήστη σε μια νέα σελίδα μετά την επιτυχή σύνδεση
-            // window.location.href = "dashboard.html";
-
-            // Παράδειγμα: Εμφάνιση μηνύματος επιτυχούς σύνδεσης
-            alert("Successful login!");
+        document.addEventListener('DOMContentLoaded', function() {
+            const inputField = document.getElementById('email');
+            const label = inputField.nextElementSibling;
+            
+            inputField.addEventListener('focus', function() {
+                label.classList.add('focused');
+            });
+            
+            inputField.addEventListener('blur', function() {
+                if (inputField.value === '') {
+                    label.classList.remove('focused');
+                }
+            });
         });
-
-        // Εάν υπάρχουν προηγούμενα στοιχεία σύνδεσης αποθηκευμένα στο localStorage,
-        // συμπληρώνουμε αυτόματα τα πεδία εισόδου.
-        var storedEmail = localStorage.getItem("email");
-        var storedPassword = localStorage.getItem("password");
-        if (storedEmail && storedPassword) {
-            document.getElementById("email").value = storedEmail;
-            document.getElementById("password").value = storedPassword;
-        }
     </script>
 </body>
 </html>
