Login and Sign Up done

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SwiftSkies</title>
     <link rel="icon"
-        href="img/aircraft-airplane-airline-logo-label-journey-air-travel-airliner-symbol-vector-illustration 4.png"
+        href="img/logo.png"
         type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
