--- a/loginform.html
+++ b/loginform.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SwiftSkies - Sign Up</title>
+    <title>SwiftSkies - Login</title>
     <link rel="icon"
         href="img/logo.png"
         type="image/x-icon">
@@ -43,7 +43,7 @@
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-5">
-                    <img src="img/illustrator_3.png" class="img-fluid" alt="Sample image">
+                    <img src="img/illustrator_4.png" class="img-fluid" alt="Sample image">
                 </div>
                 <div class="col-md-6 offset-md-1">
                     <form id="loginForm">
@@ -62,14 +62,6 @@
                         <div class="divider d-flex align-items-center my-4">
                             <p class="text-center fw-bold mx-3 mb-0">Or</p>
                         </div>
-                        <!-- Full Name input -->
-                        <div class="form-outline mb-4">
-                            <input type="text" id="fullName" class="form-control form-control-lg" placeholder="Full Name">
-                        </div>
-                        <!-- Phone input -->
-                        <div class="form-outline mb-4">
-                            <input type="tel" id="phone" class="form-control form-control-lg" placeholder="Phone">
-                        </div>
                         <!-- Email input -->
                         <div class="form-outline mb-4">
                             <input type="email" id="email" class="form-control form-control-lg" placeholder="Email">
@@ -78,32 +70,17 @@
                         <div class="form-outline mb-4">
                             <input type="password" id="password" class="form-control form-control-lg" placeholder="Password">
                         </div>
-                        <!-- Confirm Password input -->
-                        <div class="form-outline mb-4">
-                            <input type="password" id="confirmPassword" class="form-control form-control-lg" placeholder="Confirm Password">
-                        </div>
-                        <!-- Select Role input -->
-                        <div class="form-outline mb-4">
-                            <select class="form-select form-select-lg" id="role">
-                                <option selected>Select Role</option>
-                                <option value="user">User</option>
-                                <option value="passenger">Passenger</option>
-                                <option value="staff">Staff</option>
-                                <option value="pilot">Pilot</option>
-                                <option value="purser">Purser</option>
-                            </select>
-                        </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <!-- Checkbox -->
                             <div class="form-check mb-0">
                                 <input class="form-check-input me-2" type="checkbox" value="" id="rememberMe" checked>
                                 <label class="form-check-label" for="rememberMe">Remember me</label>
                             </div>
-                            <!-- <a href="#!" class="text-body">Forgot password?</a> -->
+                            <a href="#!" class="text-body">Forgot password?</a>
                         </div>
                         <div class="text-center text-md-start mt-4 pt-2">
-                            <button type="button" id="loginBtn" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Sign Up</button>
-                            <p class="small fw-bold mt-2 pt-1 mb-0">Already have an account? <a href="loginform.html" class="link-danger">Login</a></p>
+                            <button type="button" id="loginBtn" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="registerform.html" class="link-danger">Sign Up</a></p>
                         </div>
                     </form>
                 </div>
