--- a/passenger.html
+++ b/passenger.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <title>Airline Company - Home</title>
+  <title>Airline Company - Passengers</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="home.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <svg class="bi me-2" width="40" height="32">
           <use xlink:href="#bootstrap"></use>
         </svg>
@@ -21,8 +21,8 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="home.html" class="nav-link active">Home</a></li>
-        <li class="nav-item"><a href="passenger.html" class="nav-link">Passengers</a></li>
+        <li class="nav-item"><a href="home.html" class="nav-link" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link active">Passengers</a></li>
         <li class="nav-item"><a href="flights.html" class="nav-link">Flights</a></li>
         <li class="nav-item"><a href="staff.html" class="nav-link">Staff</a></li>
         <li class="nav-item"><a href="airplane.html" class="nav-link">Airplanes</a></li>
@@ -31,10 +31,36 @@
     </header>
   </div>
   <div class="container">
-    <h2>Welcome to Airline Company</h2>
-    <img src="airplane_image.jpg" alt="Airplane Image" class="img-fluid">
-    <p>Discover a world of seamless travel with Airline Company. We are dedicated to providing top-notch service for
-      our passengers and ensuring efficient operations in the aviation industry.</p>
+    <h2>Passengers Information</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>ERNAME</th>
+          <th>SURNAME</th>
+          <th>NAME</th>
+          <th>ADDRESS</th>
+          <th>PHONE</th>
+        </tr>
+      </thead>
+      <tbody>
+        
+        <tr>
+          <td>1</td>
+          <td>Karka</td>
+          <td>Evangelia</td>
+          <td>Kitsi</td>
+          <td>2106948023</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Papadopoulos</td>
+          <td>Sotiris</td>
+          <td>Koropi</td>
+          <td>2103271896</td>
+        </tr>
+        
+      </tbody>
+    </table>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
