--- a/flights.html
+++ b/flights.html
@@ -2,30 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SwiftSkies - Flights</title>
-    <link rel="icon"
-        href="img/logo.png"
-        type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
-
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <!-- <title>Airline Company - Flights</title> -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <title>Airline Company - Flights</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -49,6 +30,7 @@
       </ul>
     </header>
   </div>
+
   <div class="container">
     <h2>Flights Information</h2>
     <table class="table">
@@ -64,31 +46,39 @@
         </tr>
       </thead>
       <tbody>
-        
-        <tr>
-          <td>1</td>
-          <td>A3627</td>
-          <td>Eleftherios Venizelos (ATH)</td>
-          <td>Amsterdam (AMS)</td>
-          <td>15-03-2024</td>
-          <td>20:20</td>
-          <td>23:20</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>A3959</td>
-          <td>Eleftherios Venizelos (ATH)</td>
-          <td>Dubai (DXB)</td>
-          <td>23-05-2024</td>
-          <td>13:35</td>
-          <td>19:35</td>
-        </tr>
-        
+        <!-- Εδώ θα προστεθούν δυναμικά οι πληροφορίες πτήσεων -->
       </tbody>
     </table>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+  </script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5+z8vwOrZ+dN6NLsow8Pk1Iv6EYWSFjvuRSJoJamo"
+    crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(function () {
+      // Χρησιμοποιήστε AJAX εδώ για να φορτώσετε δυναμικά τα δεδομένα της πτήσης σας από τη βάση δεδομένων
+      $.ajax({
+        url: 'your_php_script_to_fetch_flight_data.php',
+        method: 'GET',
+        success: function (data) {
+          // Αν τα δεδομένα ανακτηθούν με επιτυχία, ενημερώστε τον πίνακα
+          data.forEach(function (flight) {
+            var row = $('<tr>');
+            row.append($('<td>').text(flight.NUM));
+            row.append($('<td>').text(flight.FLIGHTNUM));
+            row.append($('<td>').text(flight.ORIGIN));
+            row.append($('<td>').text(flight.DEST));
+            row.append($('<td>').text(flight.DATE));
+            row.append($('<td>').text(flight["ARR-TIME"]));
+            row.append($('<td>').text(flight["DEP-TIME"]));
+            $('tbody').append(row);
+          });
+        }
+      });
+    });
   </script>
 </body>
 
