flight_Search_Result and process_booking

--- a/Flight_Search_Results.html
+++ b/Flight_Search_Results.html
@@ -1,66 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flight Search Results</title>
-    <style>
-        .flight {
-            border: 1px solid #ccc;
-            margin-bottom: 10px;
-            padding: 10px;
-        }
-        .flight-logo {
-            width: 50px;
-            height: 50px;
-            margin-right: 10px;
-            vertical-align: middle;
-        }
-        .flight-info {
-            display: inline-block;
-            vertical-align: middle;
-        }
-        .flight-price {
-            font-weight: bold;
-            color: green;
-        }
-        .book-button {
-            background-color: blue;
-            color: white;
-            padding: 5px 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-
-<div class="flight">
-    <img class="flight-logo" src="img/logo.png" alt="Airline 1">
-    <div class="flight-info">
-        <div>Departure: 10:00</div>
-        <div>Arrival: 12:00</div>
-        <div>From: New York</div>
-        <div>To: London</div>
+    <div class="container">
+        <h1 class="mt-5 mb-4">Flight Search Results</h1>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="card-header">
+                        Flight Details
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Flight from [Departure City] to [Destination City]</h5>
+                        <p class="card-text">Departure: [Departure Date and Time]</p>
+                        <p class="card-text">Arrival: [Arrival Date and Time]</p>
+                        <p class="card-text">Class: [Travel Class]</p>
+                        <p class="card-text">Price: [Price]</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Add more flight cards here if needed -->
+        </div>
     </div>
-    <div class="flight-price">$200</div>
-    <button class="book-button">Book Now</button>
-</div>
 
-<div class="flight">
-    <img class="flight-logo" src="img/logo.png" alt="Airline 2">
-    <div class="flight-info">
-        <div>Departure: 13:00</div>
-        <div>Arrival: 15:00</div>
-        <div>From: London</div>
-        <div>To: New York</div>
-    </div>
-    <div class="flight-price">$250</div>
-    <button class="book-button">Book Now</button>
-</div>
-
-<!-- Add more flights as needed -->
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
