--- a/Flight_Search_Results.html
+++ b/Flight_Search_Results.html
@@ -98,17 +98,21 @@
                     </div>
                     <span class="flight-price">$200</span>
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <p>New York (JFK) <i class="fas fa-arrow-right"></i> Los Angeles (LAX)</p>
-                        <p>Departure Time: 08:00 AM</p>
-                        <p>Arrival Time: 10:00 AM</p>
-                        <button class="btn btn-primary mt-3">Book Now</button>
+                <div class="row align-items-center">
+                    <div class="col-md-4">
+                        <p class="fw-bold text-end mb-0">ORD</p>
+                        <p class="text-end">10:00</p>
                     </div>
-                    <div class="col-md-6 text-end">
-                        <img src="img/destination_la.jpg" alt="Destination Image" class="img-fluid mt-3">
+                    <div class="col-md-4 text-center">
+                        <p class="fw-bold">2h</p>
+                        <p><i class="fas fa-long-arrow-alt-right"></i></p>
+                    </div>
+                    <div class="col-md-4">
+                        <p class="fw-bold mb-0">SFO</p>
+                        <p>12:00</p>
                     </div>
                 </div>
+                <button class="btn btn-primary mt-3">Book Now</button>
             </div>
         </div>
         <div class="col-md-6">
@@ -120,21 +124,26 @@
                     </div>
                     <span class="flight-price">$250</span>
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <p>Chicago (ORD) <i class="fas fa-arrow-right"></i> San Francisco (SFO)</p>
-                        <p>Departure Time: 10:00 AM</p>
-                        <p>Arrival Time: 12:00 PM</p>
-                        <button class="btn btn-primary mt-3">Book Now</button>
+                <div class="row align-items-center">
+                    <div class="col-md-4">
+                        <p class="fw-bold text-end mb-0">JFK</p>
+                        <p class="text-end">08:00</p>
                     </div>
-                    <div class="col-md-6 text-end">
-                        <img src="img/destination_sf.jpg" alt="Destination Image" class="img-fluid mt-3">
+                    <div class="col-md-4 text-center">
+                        <p class="fw-bold">2h</p>
+                        <p><i class="fas fa-long-arrow-alt-right"></i></p>
+                    </div>
+                    <div class="col-md-4">
+                        <p class="fw-bold mb-0">LAX</p>
+                        <p>10:00</p>
                     </div>
                 </div>
+                <button class="btn btn-primary mt-3">Book Now</button>
             </div>
         </div>
     </div>
 </div>
+
 
 
 
