fail update Flight_Search_Result.html

--- a/Flight_Search_Results.html
+++ b/Flight_Search_Results.html
@@ -93,7 +93,7 @@
             <div class="result-card">
                 <div class="flight-details">
                     <div>
-                        <img src="img/airline_logo_1.png" alt="Airline Logo" class="flight-logo">
+                        <img src="img/logo.png" alt="Airline Logo" class="flight-logo">
                         <span class="ms-2">Flight A123</span>
                     </div>
                     <span class="flight-price">$200</span>
@@ -104,8 +104,7 @@
                         <p class="text-end">10:00</p>
                     </div>
                     <div class="col-md-4 text-center">
-                        <p class="fw-bold">2h</p>
-                        <p><i class="fas fa-long-arrow-alt-right"></i></p>
+                        <p class="fw-bold">2h <i class="fas fa-long-arrow-alt-right"></i></p>
                     </div>
                     <div class="col-md-4">
                         <p class="fw-bold mb-0">SFO</p>
@@ -119,7 +118,7 @@
             <div class="result-card">
                 <div class="flight-details">
                     <div>
-                        <img src="img/airline_logo_2.png" alt="Airline Logo" class="flight-logo">
+                        <img src="img/logo.png" alt="Airline Logo" class="flight-logo">
                         <span class="ms-2">Flight B456</span>
                     </div>
                     <span class="flight-price">$250</span>
@@ -130,8 +129,7 @@
                         <p class="text-end">08:00</p>
                     </div>
                     <div class="col-md-4 text-center">
-                        <p class="fw-bold">2h</p>
-                        <p><i class="fas fa-long-arrow-alt-right"></i></p>
+                        <p class="fw-bold">2h <i class="fas fa-long-arrow-alt-right"></i></p>
                     </div>
                     <div class="col-md-4">
                         <p class="fw-bold mb-0">LAX</p>
@@ -143,6 +141,7 @@
         </div>
     </div>
 </div>
+
 
 
 
